// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index distributeByRuntime when less than 90% of runtime stats are available distributes test files between buckets based on file size 1`] = `
Array [
  Object {
    "files": Array [
      "9",
      "2",
      "1",
    ],
    "size": 12,
  },
  Object {
    "files": Array [
      "8",
      "3",
    ],
    "size": 11,
  },
  Object {
    "files": Array [
      "7",
      "4",
    ],
    "size": 11,
  },
  Object {
    "files": Array [
      "6",
      "5",
    ],
    "size": 11,
  },
]
`;

exports[`index distributeByRuntime when more than 90% of runtime stats are available distributes test based on runtime 1`] = `
Array [
  Object {
    "files": Array [
      "10",
      "3",
      "2",
    ],
    "size": 1500,
  },
  Object {
    "files": Array [
      "9",
      "4",
      "1",
    ],
    "size": 1400,
  },
  Object {
    "files": Array [
      "8",
      "5",
      "11",
    ],
    "size": 1300,
  },
  Object {
    "files": Array [
      "7",
      "6",
    ],
    "size": 1300,
  },
]
`;

exports[`index listFiles should return files when pattern is correct 1`] = `
Array [
  Object {
    "path": "test/data/fakeSpecs/2.spec",
    "size": 2,
  },
  Object {
    "path": "test/data/fakeSpecs/3.spec",
    "size": 3,
  },
  Object {
    "path": "test/data/fakeSpecs/4.spec",
    "size": 4,
  },
  Object {
    "path": "test/data/fakeSpecs/specs/1.spec",
    "size": 1,
  },
]
`;

exports[`index loadRuntimeStats when runtime.log contains malformed rows loads only well-formed rows from file 1`] = `
Map {
  "test/controllers/application_controller.spec.js" => 5084,
  "test/models/user.spec.js" => 5084,
  "test/does-not-exist-anymore.spec.js" => 234,
}
`;

exports[`index loadRuntimeStats when runtime.log has no malformed rows loads all stats from a well-formed file 1`] = `
Map {
  "test/controllers/application_controller.spec.js" => 5084,
  "test/models/user.spec.js" => 5084,
  "test/models/company.spec.js" => 1234,
  "test/routers/foo.spec.js" => 20,
  "test/config/config.spec.js" => 345,
  "test/models/account.spec.js" => 2435,
  "test/routers/bar.spec.js" => 20,
  "test/config/buz.spec.js" => 345,
  "test/models/aaa.spec.js" => 2435,
  "test/does-not-exist-anymore.spec.js" => 234,
  "test/does-not-exist-anymore_2.spec.js" => 234234,
}
`;
